Bug 167044 - Quickly closing a new Dolphin window crashes all the others Dolphin windows
Summary: Quickly closing a new Dolphin window crashes all the others Dolphin windows
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-20 01:07 UTC by Dario Andres
Modified: 2008-07-20 04:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dario Andres 2008-07-20 01:07:09 UTC
Version:           1.1 (using KDE 4.0.99  KDE4.1RC1+) (using KDE 4.0.98)
Installed from:    Unlisted Binary Package
Compiler:          gc 
OS:                Linux

(KDE 4.0.99 RC1+ - ArchLinux)
In my computer Dolphin renders a bit slow so it takes 1 or 2 seconds to initially rendering the Dolphin windows. 
I noticed that when I open a new Dolphin window (from the Dolphin File menu, or by running another instance); if I close the new window before Dolphin is completely rendered, it crashes and closes all the Dolphin windows

May be a QT bug ?

I've collected 3 different backtraces. (I suppose that depends on the moment I close the window)

Here is the backtrace:

Aplicación: Dolphin (dolphin), señal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb616b700 (LWP 20496)]
[KCrash handler]
#6  0xb6ce3470 in QAbstractSlider::setValue () from /usr/lib/libQtGui.so.4
#7  0x08080aed in KTreeView::KTreeViewPrivate::updateVerticalScrollBar ()
#8  0x08080e4e in KTreeView::KTreeViewPrivate::qt_metacall ()
#9  0xb76b6a24 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb76b779a in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb76ec8e2 in QTimeLine::frameChanged () from /usr/lib/libQtCore.so.4
#12 0xb7607b8f in ?? () from /usr/lib/libQtCore.so.4
#13 0xb76b1b01 in QObject::event () from /usr/lib/libQtCore.so.4
#14 0xb69c11a0 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#15 0xb69c8aad in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0xb7c99784 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#17 0xb76a33bd in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#18 0xb76ced3a in ?? () from /usr/lib/libQtCore.so.4
#19 0xb76cb88c in ?? () from /usr/lib/libQtCore.so.4
#20 0xb63880e8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0xb638b783 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#22 0xb638b941 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0xb76cb7f9 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#24 0xb6a51fc9 in ?? () from /usr/lib/libQtGui.so.4
#25 0xb76a1d0c in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#26 0xb76a1ec5 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#27 0xb76a4186 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#28 0xb69c105b in QApplication::exec () from /usr/lib/libQtGui.so.4
#29 0x0808204d in main ()
#0  0xb80cd424 in __kernel_vsyscall ()

another:

Aplicación: Dolphin (dolphin), señal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb60e6700 (LWP 21039)]
[KCrash handler]
#6  0xb6d3284f in QAbstractScrollArea::horizontalScrollBar ()
   from /usr/lib/libQtGui.so.4
#7  0x08080ae1 in KTreeView::KTreeViewPrivate::updateVerticalScrollBar ()
#8  0x08080e4e in KTreeView::KTreeViewPrivate::qt_metacall ()
#9  0xb7631a24 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb763279a in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#11 0xb76678e2 in QTimeLine::frameChanged () from /usr/lib/libQtCore.so.4
#12 0xb7582b8f in ?? () from /usr/lib/libQtCore.so.4
#13 0xb762cb01 in QObject::event () from /usr/lib/libQtCore.so.4
#14 0xb693c1a0 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#15 0xb6943aad in QApplication::notify () from /usr/lib/libQtGui.so.4
#16 0xb7c14784 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#17 0xb761e3bd in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#18 0xb7649d3a in ?? () from /usr/lib/libQtCore.so.4
#19 0xb764688c in ?? () from /usr/lib/libQtCore.so.4
#20 0xb63030e8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#21 0xb6306783 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#22 0xb6306941 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#23 0xb76467f9 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#24 0xb69ccfc9 in ?? () from /usr/lib/libQtGui.so.4
#25 0xb761cd0c in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#26 0xb761cec5 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#27 0xb761f186 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#28 0xb693c05b in QApplication::exec () from /usr/lib/libQtGui.so.4
#29 0x0808204d in main ()
#0  0xb8048424 in __kernel_vsyscall ()

another:

Aplicación: Dolphin (dolphin), señal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0xb60ba700 (LWP 22338)]
[KCrash handler]
#6  0x08080b34 in KTreeView::KTreeViewPrivate::startScrolling ()
#7  0x08080e63 in KTreeView::KTreeViewPrivate::qt_metacall ()
#8  0xb7605a24 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#9  0xb760679a in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#10 0xb763d92a in QTimer::timeout () from /usr/lib/libQtCore.so.4
#11 0xb760c1d9 in QTimer::timerEvent () from /usr/lib/libQtCore.so.4
#12 0xb7600b01 in QObject::event () from /usr/lib/libQtCore.so.4
#13 0xb69101a0 in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#14 0xb6917aad in QApplication::notify () from /usr/lib/libQtGui.so.4
#15 0xb7be8784 in KApplication::notify () from /opt/kdemod/lib/libkdeui.so.5
#16 0xb75f23bd in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#17 0xb761dd3a in ?? () from /usr/lib/libQtCore.so.4
#18 0xb761a88c in ?? () from /usr/lib/libQtCore.so.4
#19 0xb62d70e8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#20 0xb62da783 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#21 0xb62da941 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#22 0xb761a7f9 in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#23 0xb69a0fc9 in ?? () from /usr/lib/libQtGui.so.4
#24 0xb75f0d0c in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#25 0xb75f0ec5 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#26 0xb75f3186 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#27 0xb691005b in QApplication::exec () from /usr/lib/libQtGui.so.4
#28 0x0808204d in main ()
#0  0xb801c424 in __kernel_vsyscall ()

Tell me if you need a more detailed backtrace
Comment 1 Dario Andres 2008-07-20 01:08:43 UTC
In compiler I meant GCC 4.3
Comment 2 Peter Penz 2008-07-20 02:29:14 UTC
Thanks Dario, the backtraces and your information are very useful. I'll try to reproduce this issue tomorrow...
Comment 3 Peter Penz 2008-07-20 03:34:23 UTC
SVN commit 835169 by ppenz:

fix crash in Folder Panel (= treeview) when Dolphin gets closed before the panel got polished

BUG: 167044

 M  +21 -7     ktreeview.cpp  
 M  +3 -0      ktreeview.h  
 M  +3 -0      ktreeview_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=835169
Comment 4 Peter Penz 2008-07-20 03:35:05 UTC
SVN commit 835171 by ppenz:

Backport of 835169: fix crash in Folder Panel (= treeview) when Dolphin gets closed before the panel got polished

CCBUG: 167044

 M  +21 -7     ktreeview.cpp  
 M  +3 -0      ktreeview.h  
 M  +3 -0      ktreeview_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=835171
Comment 5 Peter Penz 2008-07-20 04:11:57 UTC
SVN commit 835179 by ppenz:

revert fix for bug 167044 - although the crash is fixed the autoscroll does not work as expected anymore...

CCBUG: 167044

 M  +1 -15     ktreeview.cpp  
 M  +0 -3      ktreeview.h  
 M  +0 -3      ktreeview_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=835179
Comment 6 Peter Penz 2008-07-20 04:21:52 UTC
Ah - committed the fix too fast... -> reopening
Comment 7 Peter Penz 2008-07-20 04:42:55 UTC
SVN commit 835185 by ppenz:

This time doing it the correct way: just stop the timers when the widget gets hidden

BUG: 167044

 M  +7 -0      ktreeview.cpp  
 M  +3 -0      ktreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=835185
Comment 8 Peter Penz 2008-07-20 04:43:30 UTC
SVN commit 835186 by ppenz:

Backport of 835185: This time doing it the correct way - just stop the timers when the widget gets hidden

CCBUG: 167044

 M  +7 -0      ktreeview.cpp  
 M  +3 -0      ktreeview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=835186