fix crash in Folder Panel (= treeview) when Dolphin gets closed before the panel got polished

BUG: 167044

svn path=/trunk/KDE/kdebase/apps/; revision=835169